# geekmagic-hacs

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  hacs.yaml  hassfest.yaml
custom_components/geekmagic/: __init__.py  config_flow.py  const.py  coordinator.py  device.py  manifest.json  panel.py  render_context.py  renderer.py  strings.json  switch.py  websocket.py
custom_components/geekmagic/entities/: base.py  entity.py  number.py  select.py  sensor.py  switch.py
custom_components/geekmagic/frontend/: package-lock.json  package.json
custom_components/geekmagic/frontend/src/: color-utils.test.ts  color-utils.ts  geekmagic-panel.ts
custom_components/geekmagic/layouts/: base.py
custom_components/geekmagic/widgets/: attribute_list.py  base.py  chart.py  clock.py  component_helpers.py  components.py  entity.py  gauge.py  helpers.py  icon.py  layout_helpers.py  media.py  progress.py  status.py  text.py  weather.py
scripts/: check_translations.py  generate_samples.py
tests/: test_coordinator.py  test_device.py  test_font_scaling.py  test_icons.py  test_integration.py  test_notification.py  test_render_context.py  test_renderer.py
tests/entities/: test_entities.py
tests/widgets/: test_components.py  test_flex_layout.py  test_widgets.py
